# salt-tool-template-formula

./: README.rst  cookiecutter.json
{= cookiecutter.abbr =}-formula/: .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  FORMULA  kitchen.yml  pillar.example  pyproject.toml  release.config.js
{= cookiecutter.abbr =}-formula/docs/: README.rst  TOFS_pattern.rst  _README.rst.tpl  index.rst
{= cookiecutter.abbr =}-formula/docs/modules_execution/: {= cookiecutter.abbr_pysafe =}.rst
{= cookiecutter.abbr =}-formula/docs/modules_state/: {= cookiecutter.abbr_pysafe =}.rst
{= cookiecutter.abbr =}-formula/test/integration/default/: inspec.yml
{= cookiecutter.abbr =}-formula/test/salt/pillar/: default.sls  gentoo.sls  upstart.sls
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/: clean.sls  init.sls  post-map.jinja
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/completions/: clean.sls  init.sls
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/config/: clean.sls  file.sls  init.sls  sync.sls
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/package/: clean.sls  init.sls  install.sls
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/package/repo/: clean.sls  (+2 more)
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/parameters/: defaults.yaml
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/service/: clean.sls  init.sls  running.sls
{= cookiecutter.abbr =}-formula/tool_{= cookiecutter.abbr_pysafe =}/xdg/: clean.sls  init.sls  migrated.sls
(+191 files in other folders)
